--- a/test_article_reference.html
+++ b/test_article_reference.html
@@ -73,9 +73,8 @@
 
 	<div id = "content">
 		
-  <h1 id="test-article">Test Article</h1>
+  <h1>Test Article</h1>
 <p>This article is a test to ensure that the build system works correctly.</p>
-
 
 	</div>
 
