Add cssmin to requirements.txt

--- a/test_article_reference.html
+++ b/test_article_reference.html
@@ -13,12 +13,9 @@
 
     
 
-    <!-- Megaphysics template -->
-    <link href="/assets/megaphysics.css" rel="stylesheet">
+    <!-- Minified and concatenated css -->
+    <link href="/assets/styles.min.css" rel="stylesheet">
     
-    <!-- Flatly bootswatch theme -->
-    <link href="/assets/flatly-bootstrap.min.css" rel="stylesheet">
-
 </head>
 
 <body>
