--- a/test_article_reference.html
+++ b/test_article_reference.html
@@ -51,10 +51,8 @@
         </div>
     </div><!-- /.container -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Include combined jQuery and bootstrap javascript -->
+    <script src="/assets/javascripts.min.js"></script>
 
 </body>
 </html>
