update ref test

--- a/test_article_reference.html
+++ b/test_article_reference.html
@@ -52,7 +52,7 @@
     </div><!-- /.container -->
 
     <!-- Include combined jQuery and bootstrap javascript -->
-    <script src="/assets/javascripts.min.js"></script>
+    <script src="/assets/scripts.min.js"></script>
 
 </body>
 </html>
