--- a/test_article_reference.html
+++ b/test_article_reference.html
@@ -29,11 +29,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index.html">Megaphysics</a>
+                <a class="navbar-brand" href="/">Megaphysics</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li  ><a href="/index.html">Home</a></li>
                     <li  ><a href="/about.html">About</a></li>
                     <li  ><a href="/articles.html">Articles</a></li>
                     <li  ><a href="/courses.html">Courses</a></li>
